# claude-behavior-enforcer

./: .gitignore  COACH.md  LEARN.md  MEMO.md  README.md  REVIEW.md  TASK.md  base-claude.md  config.yaml  incident_001_auth-middleware-undefined-userid.md  pyproject.toml
enforcer/: __init__.py  cli.py  config.py  installer.py  reporter.py  runner.py
enforcer/grader/: __init__.py  assert_engine.py
fixtures/simple/broken-import/: app.py
hooks/: block-enforcer-access.sh
requirements/agents/: aidb-harvests-knowledge.yaml  coach-writes-output.yaml  learn-writes-output.yaml  memo-writes-output.yaml  on-call-triages-error.yaml  qa-runs-tests.yaml  review-writes-output.yaml  task-writes-plan.yaml  web-bot-generates-scripts.yaml
requirements/base/: bullets-over-paragraphs.yaml  no-co-authored-by.yaml  no-em-dash.yaml  no-emojis.yaml  no-push.yaml  read-not-bash-cat.yaml  short-status.yaml  skip-introductions.yaml
requirements/fixtures/: broken-import.yaml
requirements/skills/: claude-behavior-enforcer-skill.yaml  differential-review.yaml  owasp-security.yaml  skill-aidb.yaml  skill-capability-gap.yaml  skill-db-helper.yaml  skill-debate.yaml  skill-git-dispatch.yaml  skill-minihongo.yaml  skill-project-kickstart-scope.yaml  skill-project-kickstart-trd.yaml  skill-second-opinion.yaml  skill-swarm.yaml  skill-team-workflow.yaml  skill-tmux-claude-agent-tracker-dev.yaml  skill-tmux-claude-agent-tracker.yaml  skill-web-bot.yaml
skill/: SKILL.md
