[project]
name = "claude-behavior-enforcer"
version = "0.1.0"
description = "Test and enforce Claude Code behavioral requirements with holdout isolation"
requires-python = ">=3.10"
dependencies = ["pyyaml>=6.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["enforcer"]

[project.scripts]
enforcer = "enforcer.cli:main"
